--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ regex = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 xdg = "*"
+
+[dev-dependencies]
+matches = "*"
