--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ regex = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 xdg = "*"
+anyhow = "*"
 
 [dev-dependencies]
 matches = "*"
