--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 xdg = "*"
 anyhow = "*"
+clap = { git = "https://github.com/clap-rs/clap/" }
 
 [dev-dependencies]
 matches = "*"
