--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "*"
-regex = "*"
+lazy_static = "1.4.0"
+regex = "1.3.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-xdg = "*"
-anyhow = "*"
+xdg = "2.2.0"
+anyhow = "1.0.26"
 clap = { git = "https://github.com/clap-rs/clap/" }
-
-[dev-dependencies]
-matches = "*"
